# simple-sds-sbwt

./: Cargo.toml  README.md
src/: bit_vector.rs  bits.rs  int_vector.rs  ops.rs  raw_vector.rs  rl_vector.rs  serialize.rs  sparse_vector.rs  wavelet_matrix.rs
src/bit_vector/: rank_support.rs  select_support.rs
src/rl_vector/: index.rs
src/wavelet_matrix/: wm_core.rs
