[package]
name = "simple-sds-sbwt"
version = "0.3.2"
edition = "2018"
description = "A fork of simple-sds used in the sbwt crate."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jnalanko/simple-sds-sbwt/"

[features]
binaries = ["getopts", "rand", "rand_distr"]

[dependencies]
getopts = { version = "0.2", optional = true }
libc = "0.2"
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"

[[bin]]
name = "bv-benchmark"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "wm-benchmark"
required-features = ["binaries"]
test = false
bench = false
doc = false
